cabal-version:      2.4
name:               Raytracer
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SeveralCube22
maintainer:         manam.viswadeep@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Raytracer
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  Raytracer

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.15.1.0,
        simple-vec3 ^>=0.6,
        JuicyPixels ^>=3.3.7,
        convertible ^>=1.1.1.0
    hs-source-dirs:   app
    default-language: Haskell2010
